test(ui/welcome): should show title with success

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,7 @@
     "src/types/*"
   ], /* Type declaration files to be included in compilation. */
   "include": [
-    "src/**/*",
+    "src",
     "App.tsx",
     "tests"
   ],
