--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
     "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^12.4.2",
     "metro-react-native-babel-preset": "^0.67.0",
