--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,11 @@
     /* Module Resolution Options */
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": ".", /* Base directory to resolve non-absolute module names. */
-    "paths": {}, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "paths": {
+      "~/presentation/assets/images": [
+        "src/presentation/assets/images"
+      ]
+    }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "allowSyntheticDefaultImports": true, /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
@@ -54,7 +58,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "types": [
-    "src/types/*"
+    "src/main/types/*"
   ], /* Type declaration files to be included in compilation. */
   "include": [
     "src",
@@ -66,6 +70,5 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js",
-    "e2e"
   ]
 }
