--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,12 @@
     "paths": {
       "~/presentation/assets/images": [
         "src/presentation/assets/images"
+      ],
+      "~/presentation/screens": [
+        "src/presentation/screens"
+      ],
+      "~/presentation/themes": [
+        "src/presentation/themes"
       ]
     }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
