--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest --passWithNoTests",
-    "test:staged": "jest --passWithNoTests -- --findRelatedTests",
+    "test": "jest --passWithNoTests --coverage --no-cache --runInBand",
+    "test:staged": "jest --passWithNoTests -- --findRelatedTests --no-cache --runInBand",
     "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --fix",
     "pretty": "prettier --config ./.prettierrc.js --write \"*/**/*.{js,jsx,ts,tsx,json}\"",
     "prepare": "husky install",
