--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     ]
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "install": "^0.13.0",
+    "npm": "^8.12.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
     "styled-components": "^5.3.5"
   },
