--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,18 @@
       ],
       "~/presentation/themes": [
         "src/presentation/themes"
+      ],
+      "~/main/navigation": [
+        "src/main/navigation"
+      ],
+      "~/main/factories": [
+        "src/main/factories"
+      ],
+      "~/main/helpers": [
+        "src/main/helpers"
+      ],
+      "~/main": [
+        "src/main"
       ]
     }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
