--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@react-native-firebase/analytics": "^14.11.0",
     "@react-native-firebase/app": "^14.11.0",
+    "@react-native-firebase/database": "^14.11.1",
     "@react-native-firebase/remote-config": "^14.11.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
