--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,7 +60,16 @@
       ],
       "~/domain/useCases": [
         "src/domain/useCases"
-      ]
+      ],
+      "~/data/remoteConfig": [
+        "src/data/remoteConfig"
+      ],
+      "~/data/database": [
+        "src/data/database"
+      ],
+      "~/infra": [
+        "src/infra"
+      ],
     }, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
