feat(data/usecases): move getStatusAddPlanRemoteConfig and dependencies to your folders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,6 +67,9 @@
       "~/data/database": [
         "src/data/database"
       ],
+      "~/data/useCases": [
+        "src/data/useCases"
+      ],
       "~/infra": [
         "src/infra"
       ],
