--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
+    "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
