test(presentation/activity): should call getMyPlans of GetMyPlansDatabase return my plans

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,8 +40,8 @@
       "~/presentation/assets/images": [
         "src/presentation/assets/images"
       ],
-      "~/presentation/screens": [
-        "src/presentation/screens"
+      "~/presentation/screens*": [
+        "src/presentation/screens*", "src/presentation/screens"
       ],
       "~/presentation/themes": [
         "src/presentation/themes"
