--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "npm": "^8.12.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-shimmer-placeholder": "^2.0.8",
     "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
