--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-shimmer-placeholder": "^2.0.8",
